Add simple version of client for service request

--- a/ext-systems/work-register/src/main/webapp/index.html
+++ b/ext-systems/work-register/src/main/webapp/index.html
@@ -8,7 +8,7 @@
             <p>Surname:<input type="text" name="lastName" formmethod="get"></p>
             <p>Birthday:<input type="text" name="birthDay" formmethod="get"></p>
             <p>Organization name:<input type="text" name="organization" formmethod="get"></p>
-            <p>Position:<input type="text" name="post" formmethod="get"></p>
+            <p>Post:<input type="text" name="post" formmethod="get"></p>
             <p>Work start date:<input type="text" name="workStart" formmethod="get"></p>
             <p>Work end date:<input type="text" name="workEnd" formmethod="get"></p>
             <input type="submit" value="Check">
